src/objects/loan__Address__c.object
<CustomObject>
    <fields>
        <fullName>loan__Address_1__c</fullName>
        <label>Address 1</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_2__c</fullName>
        <label>Address 2</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_3__c</fullName>
        <label>Address 3</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Address_Date__c</fullName>
        <label>Address Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>loan__Address_Type__c</fullName>
        <label>Address Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>loan__City__c</fullName>
        <label>City</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Landmark__c</fullName>
        <label>Landmark</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Phone1__c</fullName>
        <label>Phone1</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>loan__Phone2__c</fullName>
        <label>Phone2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>loan__PinCode__c</fullName>
        <label>PinCode</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>loan__State__c</fullName>
        <label>State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Address</label>
    <nameField>
        <displayFormat>AID-{0000000000}</displayFormat>
        <label>Address ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Addresses</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>